# socket-chatting

./: CMakeLists.txt  README.md
.github/workflows/: build.yaml  cmake.yaml
include/: connect_window.hpp  packaged_msg.hpp  user.hpp
src/: client-gui.cpp  client-tui.cpp  client.cpp  connect_window.cpp  packaged_msg.cpp  server.cpp  user.cpp
